WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89821
DFG::operationNewArray is unnecessarily slow, and may use the wrong array prototype when inlined
https://bugs.webkit.org/show_bug.cgi?id=89821
Summary
DFG::operationNewArray is unnecessarily slow, and may use the wrong array pro...
Filip Pizlo
Reported
2012-06-23 21:11:56 PDT
Due to global objects.
Attachments
work in progress
(21.94 KB, patch)
2012-06-25 19:19 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(28.37 KB, patch)
2012-06-25 19:34 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-06-25 19:19:02 PDT
Created
attachment 149429
[details]
work in progress
WebKit Review Bot
Comment 2
2012-06-25 19:22:14 PDT
Attachment 149429
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/dfg/DFGOperations.h:79: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/JavaScriptCore/dfg/DFGOperations.h:80: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/JavaScriptCore/dfg/DFGOperations.h:81: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 3 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2012-06-25 19:34:55 PDT
Created
attachment 149434
[details]
the patch
WebKit Review Bot
Comment 4
2012-06-25 19:37:06 PDT
Attachment 149434
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/dfg/DFGOperations.h:79: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/JavaScriptCore/dfg/DFGOperations.h:80: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/JavaScriptCore/dfg/DFGOperations.h:81: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 3 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 5
2012-06-25 21:46:20 PDT
Comment on
attachment 149434
[details]
the patch r=me Please add a test for wrong prototype case.
Filip Pizlo
Comment 6
2012-06-25 23:34:07 PDT
(In reply to
comment #5
)
> (From update of
attachment 149434
[details]
) > r=me > > Please add a test for wrong prototype case.
Thanks, will do!
Filip Pizlo
Comment 7
2012-06-26 12:42:46 PDT
Landed with tests in
http://trac.webkit.org/changeset/121280
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug